--- a/weather-app/style.css
+++ b/weather-app/style.css
@@ -10,11 +10,11 @@ html {
     scroll-behavior: smooth;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-//
+
 body {
-    background-color: rgb(106, 233, 191);
+    background: linear-gradient(#113a8b,#42a7c3);
 }
-//
+
 .main {
     width: 90%;
     height: 300vh;
@@ -60,21 +60,17 @@ a {
 
 .container {
     height: 100vh;
-    margin: 20px;
-    padding: 10px 0 15px 0;
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 }
 
 .location, .temperature {
-    width: 50%;
     display: flex;
     justify-content: space-around;
-    align-items: center;
 }
 
 .location {
@@ -133,7 +129,7 @@ a {
 }
 
 .form-btn img {
-    width: 40px;
-    height: 40px;
+    width: 38px;
+    height: 38px;
 }
 
